# hummanta

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: context.rs  errors.rs  main.rs
crates/cli/src/cmd/: init.rs  mod.rs
crates/cli/src/cmd/toolchain/: add.rs  list.rs  mod.rs  remove.rs
crates/cli/src/cmd/version/: add.rs  link.rs  list.rs  mod.rs  remove.rs  switch.rs
crates/detection/: Cargo.toml  README.md
crates/detection/src/: command.rs  lib.rs  result.rs
crates/fetcher/: Cargo.toml
crates/fetcher/src/: checksum.rs  context.rs  errors.rs  factory.rs  fetcher.rs  lib.rs  local.rs  remote.rs
crates/hmt-cli/: Cargo.toml
crates/hmt-cli/src/: config.rs  context.rs  errors.rs  main.rs  utils.rs
crates/hmt-cli/src/cmd/: build.rs  compile.rs  init.rs  mod.rs
crates/hmt-cli/src/cmd/toolchain/: add.rs  list.rs  mod.rs  remove.rs  show.rs
crates/hmt-cli/src/cmd/version/: add.rs  list.rs
crates/hmt-detection/: Cargo.toml  README.md
crates/hmt-detection/src/: command.rs  context.rs  lib.rs  result.rs
crates/hmt-fetcher/: Cargo.toml
crates/hmt-fetcher/src/: errors.rs  fetcher.rs  lib.rs  remote.rs  traits.rs
crates/hmt-manifest/: Cargo.toml
crates/hmt-manifest/src/: index.rs  installed.rs  lib.rs  package.rs  project.rs  release.rs  toolchain.rs
crates/hmt-manifest/tests/: index-manifest.rs  toolchain-manifest.rs
crates/hmt-packager/: Cargo.toml
crates/hmt-packager/src/: args.rs  main.rs  package.rs
crates/hmt-registry/: Cargo.toml
crates/hmt-registry/src/: client.rs  error.rs  lib.rs
crates/hmt-registry/src/client/: file.rs  http.rs  mod.rs
crates/hmt-registry/src/manager/: base.rs  mod.rs  target.rs  toolchain.rs
crates/hmt-registry/src/traits/: client.rs  kind.rs  local.rs  manager.rs  mod.rs  package.rs  query.rs  remote.rs
crates/hmt-utils/: Cargo.toml
crates/hmt-utils/src/: bytes.rs  lib.rs
crates/hmt-utils/src/archive/: archive_dir.rs  archive_file.rs
crates/hmt-utils/src/checksum/: generate.rs  mod.rs  read.rs  verify.rs
crates/manifest/: Cargo.toml
crates/manifest-generator/: Cargo.toml
crates/manifest-generator/src/: main.rs
crates/manifest/src/: error.rs  index.rs  lib.rs  toolchain.rs
crates/manifest/tests/: index-manifest.rs  toolchain-manifest.rs
crates/packager/: Cargo.toml
crates/packager/src/: archive.rs  args.rs  checksum.rs  main.rs  package.rs  utils.rs
crates/solidity-detector/: Cargo.toml
crates/solidity-detector/tests/: solidity-detector-file.rs  solidity-detector-foundry.rs  solidity-detector-hardhat.rs  test-solidity-detector-file.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/utils/src/archive/: archive_file.rs  mod.rs  unpack.rs
crates/utils/src/checksum/: generate.rs  mod.rs  verify.rs
manifests/: README.md
manifests/toolchains/: index.toml  solidity.toml
samples/solidity/ballot/: Ballot.sol
samples/solidity/blind-auction/: BlindAuction.sol
samples/solidity/coin/: Coin.sol
samples/solidity/hardhat/: package-lock.json  package.json
samples/solidity/simple-auction/: SimpleAuction.sol
samples/solidity/simple-payment-channel/: SimplePaymentChannel.sol
samples/solidity/token/: Token.sol
src/: errors.rs
src/cmd/: init.rs  mod.rs
src/cmd/toolchain/: list.rs  mod.rs
