[workspace]
default-members = ["crates/hmt-cli"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.11.18"
edition = "2021"

[workspace.dependencies]
# inner dependencies
hmt-detection = { path = "crates/hmt-detection" }
hmt-fetcher = { path = "crates/hmt-fetcher" }
hmt-manifest = { path = "crates/hmt-manifest" }
hmt-registry = { path = "crates/hmt-registry" }
hmt-utils = { path = "crates/hmt-utils" }

anyhow = "1.0"
async-trait = "0.1.89"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6.0"
flate2 = "1.1"
once_cell = "1.21"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tar = "0.4.44"
target-triple = "1.0"
tempfile = "3.24"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2"
