[workspace]
default-members = ["crates/hmt-cli"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.11.28"
edition = "2021"

[workspace.dependencies]
# inner dependencies
hmt-detection = { path = "crates/hmt-detection" }
hmt-fetcher = { path = "crates/hmt-fetcher" }
hmt-manifest = { path = "crates/hmt-manifest" }
hmt-registry = { path = "crates/hmt-registry" }
hmt-utils = { path = "crates/hmt-utils" }

anyhow = "1.0"
async-trait = "0.1.89"
base16ct = { version = "1.0", features = ["alloc"] }
clap = { version = "4.6", features = ["derive", "env"] }
dirs = "6.0"
flate2 = "1.1"
once_cell = "1.21"
reqwest = { version = "0.13", default-features = false }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tar = "0.4.45"
target-triple = "1.0"
tempfile = "3.27"
thiserror = "2.0"
tokio = { version = "1.51", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2"
