[package]
name = "hummanta-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hummanta"
path = "src/main.rs"

[dependencies]
# inner dependencies
hmt-fetcher.workspace = true
hmt-manifest.workspace = true
hmt-detection.workspace = true
hmt-utils.workspace = true

anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
semver.workspace = true
serde.workspace = true
target-triple.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
