[package]
name = "hummanta-fetcher"
version.workspace = true
edition.workspace = true

[dependencies]
# inner dependencies
hmt-utils.workspace = true

async-trait.workspace = true
once_cell.workspace = true
reqwest.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
