[package]
name = "hmt-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hummanta"
path = "src/main.rs"

[dependencies]
# inner dependencies
hmt-detection.workspace = true
hmt-manifest.workspace = true
hmt-registry.workspace = true

anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
once_cell.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
walkdir.workspace = true
