[package]
name = "hmt-manifest"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hmt-manifest"
path = "bin/main.rs"

[dependencies]
# inner dependencies
hmt-utils.workspace = true

anyhow.workspace = true
clap.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
