[package]
name = "hmt-packager"
version.workspace = true
edition.workspace = true

[dependencies]
# inner dependencies
hmt-utils.workspace = true

anyhow.workspace = true
clap.workspace = true
target-triple.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true
