[package]
name = "hummanta-manifest-generator"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
hummanta-manifest.workspace = true
sha2.workspace = true
target-triple.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread"] }
toml.workspace = true
