[package]
name = "hummanta-manifest"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hummanta-manifest-generator"
path = "bin/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
flate2.workspace = true
serde.workspace = true
sha2.workspace = true
tar.workspace = true
target-triple.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
