[package]
name = "hummanta-manifest"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hummanta-manifest-generator"
path = "bin/main.rs"

[dependencies]
# inner dependencies
hummanta-utils.workspace = true

clap.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
