[package]
name = "hummanta-packager"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
flate2.workspace = true
sha2.workspace = true
tar.workspace = true
target-triple.workspace = true
tempfile.workspace = true
tokio.workspace = true
walkdir.workspace = true
