[package]
name = "hummanta-packager"
version.workspace = true
edition.workspace = true

[dependencies]
# inner dependencies
hummanta-utils.workspace = true

anyhow.workspace = true
clap.workspace = true
target-triple.workspace = true
tempfile.workspace = true
tokio.workspace = true
walkdir.workspace = true
